fixed spacing issues

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -302,12 +302,20 @@ input:not([type='radio']) {
     float: right;
 }
 
-/* input {
-    clear: both;
-    float: right;
+fieldset {
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-block-start: 0;
+    padding-block-end: 0;
+    padding-inline-start: 0;
+    padding-inline-end: 0;
+    border: none;
+    min-inline-size: min-content;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
-
-input[type='radio'] {
-    float: none;
-} */
+fieldset span {
+    float: right;
+    margin-right: 10px;
+}
